--- a/index.html
+++ b/index.html
@@ -81,49 +81,49 @@
                 <table id="Faces">
                     <th colspan="3">Coaches</th>
                     <tr>
-                        <td><p>Renan Mougenot <br> <em><small>Head Coach</small></em></p></td>
-                        <td><p>Mansour Al Hajri <br> <em><small>Assistant Coach</small></em></p></td>
-                        <td><p>Justin Foster <br> <em><small>Goalkeeper Coach</small></em></p></td>
+                        <td><p>Renan Mougenot <br><em><small>Head Coach</small></em></p></td>
+                        <td><p>Mansour Al Hajri <br><em><small>Assistant Coach</small></em></p></td>
+                        <td><p>Justin Foster <br><em><small>Goalkeeper Coach</small></em></p></td>
                     </tr>
 
                     <th colspan="3">Forwards</th>
                     <tr>
-                        <td><p>Agustin Torena</p></td>
-                        <td><p>Aziz Alarady</p></td>
-                        <td><p>Belal Glab</p></td>
+                        <td><p>Agustin Torena <br><em><small>#</small></em></p></td>
+                        <td><p>Aziz Alarady <br><em><small>#96</small></em></p></td>
+                        <td><p>Belal Glab <br><em><small>#9</small></em></p></td>
                     </tr>
                     <tr>
-                        <td><p>Brandon Pearce <br> <em><small>#28</small></em></p></td>
-                        <td><p>Emmanuel Perez <br> <em><small>#11</small></em></p></td>
-                        <td><p>Gabe Juarez <br> <em><small>#18</small></em></p></td>
+                        <td><p>Brandon Pearce <br><em><small>#28</small></em></p></td>
+                        <td><p>Emmanuel Perez <br><em><small>#11</small></em></p></td>
+                        <td><p>Gabe Juarez <br><em><small>#18</small></em></p></td>
                     </tr>
                     <tr>
-                        <td><p>Jumaah Alfaihani <br> <em><small>#94</small></em></p></td>
-                        <td><p>Luis Arce <br> <em><small>#30</small></em></p></td>
-                        <td><p>Will Naughton <br> <em><small>#45</small></em</p></td>
+                        <td><p>Jumaah Alfaihani <br><em><small>#94</small></em></p></td>
+                        <td><p>Luis Arce <br><em><small>#30</small></em></p></td>
+                        <td><p>Will Naughton <br><em><small>#45</small></em></p></td>
                     </tr>
 
                     <th colspan="3">Midfielders</th>
                     <tr>
-                        <td><p>Asher Jensen</p></td>
-                        <td><p>Charly Nuñez</p></td>
-                        <td><p>Jake Williams <br> <em><small>#19</small></em></p></td>
+                        <td><p>Asher Jensen <br><em><small>#7</small></em></p></td>
+                        <td><p>Charly Nuñez <br><em><small>#8</small></em></p></td>
+                        <td><p>Jake Williams <br><em><small>#19</small></em></p></td>
                     </tr>
                     <tr>
-                        <td><p>Luis Jordan <br> <em><small>#17</small></em></p></td>
-                        <td><p>Riley Wright <br> <em><small>#10</small></em></p></td>
-                        <td><p>Teegan Smith</p></td>
+                        <td><p>Luis Jordan <br><em><small>#17</small></em></p></td>
+                        <td><p>Riley Wright <br><em><small>#10</small></em></p></td>
+                        <td><p>Teegan Smith <br><em><small>#</small></em></p></td>
                     </tr>
 
                     <th colspan="3">Defenders</th>
                     <tr>
-                        <td><p>Ethan Barnette <br> <em><small>#3</small></em></p></td>
-                        <td><p>James Patten <br> <em><small>#14</small></em></p></td>
-                        <td><p>Jorge Benitez <br> <em><small>#26</small></em></p></td>
+                        <td><p>Ethan Barnette <br><em><small>#3</small></em></p></td>
+                        <td><p>James Patten <br><em><small>#14</small></em></p></td>
+                        <td><p>Jorge Benitez <br><em><small>#26</small></em></p></td>
                     </tr>
                     <tr>
-                        <td><p>Kaden Hecker <br> <em><small>#22</small></em></p></td>
-                        <td colspan="2"><p>Kolton Kitchin <br> <em><small>#24</small></em></p></td>
+                        <td><p>Kaden Hecker <br><em><small>#22</small></em></p></td>
+                        <td colspan="2"><p>Kolton Kitchin <br><em><small>#24</small></em></p></td>
                     </tr>
                     <th colspan="3">Goalkeeper</th>
                     <tr>
