--- a/index.html
+++ b/index.html
@@ -123,7 +123,9 @@
                     </tr>
                     <tr>
                         <td><p>Kaden Hecker <br><em><small>#22</small></em></p></td>
-                        <td colspan="2"><p>Kolton Kitchin <br><em><small>#24</small></em></p></td>
+                        <td><p>Kolton Kitchin <br><em><small>#24</small></em></p></td>
+                        <td><p>Kontey Simpore <br><em><small>#16</small></em></p></td>
+                    </tr>
                     </tr>
                     <th colspan="3">Goalkeeper</th>
                     <tr>
