--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <title>Weber State Men's Soccer Team Black</title>
         <link href="./css/stylesheet.css" rel="stylesheet"/>
         <script src="./Javascript/database.js"></script>
+        <script src="./Javascript/cut.js"></script>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
         <link rel="icon" href="./img/Logo.jpeg">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -95,23 +96,33 @@
                     <tr>
                         <td><p>Brandon Pearce <br><em><small>#28</small></em></p></td>
                         <td><p>Emmanuel Perez <br><em><small>#11</small></em></p></td>
-                        <td><p>Gabe Juarez <br><em><small>#18</small></em></p></td>
+                        <td><p>Hunter Spencer <br><em><small></small></em></p></td>
                     </tr>
                     <tr>
                         <td><p>Jumaah Alfaihani <br><em><small>#94</small></em></p></td>
                         <td><p>Luis Arce <br><em><small>#12</small></em></p></td>
+                        <td><p>Luis Jordan <br><em><small>#17</small></em></p></td>
+                    </tr>
+                    <tr>
+                        <td><p>Said Isa <br><em><small></small></em></p></td>
                         <td><p>Will Naughton <br><em><small>#45</small></em></p></td>
+                        <td><p><br><em><small></small></em></p></td>
                     </tr>
 
                     <th colspan="3">Midfielders</th>
                     <tr>
                         <td><p>Asher Jensen <br><em><small>#7</small></em></p></td>
                         <td><p>Charly Nuñez <br><em><small>#8</small></em></p></td>
-                        <td><p>Jake Williams <br><em><small>#19</small></em></p></td>
+                        <td><p>Gabe Juarez <br><em><small>#18</small></em></p></td>
                     </tr>
                     <tr>
-                        <td><p>Luis Jordan <br><em><small>#17</small></em></p></td>
+                        <td><p>Jake Williams <br><em><small>#19</small></em></p></td>
+                        <td><p>Patrick <br><em><small></small></em></p></td>
                         <td><p>Riley Wright <br><em><small>#10</small></em></p></td>
+                    </tr>
+                    <tr>
+                        <td><p>Sergio Payá <br><em><small></small></em></p></td>
+                        <td><p>Santiago Tano <br><em><small></small></em></p></td>
                         <td><p>Teegan Smith <br><em><small></small></em></p></td>
                     </tr>
 
@@ -126,6 +137,10 @@
                         <td><p>Kolton Kitchin <br><em><small>#24</small></em></p></td>
                         <td><p>Kontey Simpore <br><em><small>#16</small></em></p></td>
                     </tr>
+                    <tr>
+                        <td><p>Thaddeus Pappadakis <br><em><small></small></em></p></td>
+                        <td>Bernardo<p><br><em><small></small></em></p></td>
+                        <td>Mohammed<p><br><em><small></small></em></p></td>
                     </tr>
                     <th colspan="3">Goalkeeper</th>
                     <tr>
@@ -137,7 +152,8 @@
             </section>
 
             <section id="Line-up">
-                <h1>Line-up for the next game</h1>
+
+                <a id="Line-up" title="Click here for the JavaScript Database of the players" onclick="print_roster()"><h1>Line-up for the next game</h1></a>
                 <figure>
                     <a href="./img/lineup.jpeg" target="_blank"><img src="./img/lineup.jpeg"></a>
                     <figcaption>Formation: 4-2-3-1</figcaption>
