--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@
                     </tr>
                     <tr>
                         <td><p>Thaddeus Pappadakis <br><em><small></small></em></p></td>
-                        <td>Bernardo<p><br><em><small></small></em></p></td>
-                        <td>Mohammed<p><br><em><small></small></em></p></td>
+                        <td><p>Bernardo<br><em><small></small></em></p></td>
+                        <td><p>Mohammed<br><em><small></small></em></p></td>
                     </tr>
                     <th colspan="3">Goalkeeper</th>
                     <tr>
