--- a/html/order.html
+++ b/html/order.html
@@ -178,6 +178,12 @@
                 <td>Medium</td>
                 <td>Small</td>
             </tr>
+            <tr class="special">
+                <td>Extra</td>
+                <td>N/A</td>
+                <td>Large</td>
+                <td>Large</td>
+            </tr>
             <tr class="practice">
                 <td>Luis C.</td>
                 <td>N/A</td>
@@ -219,7 +225,7 @@
                 <td class="red">Practice Players</td>
             </tr>
                 <td>24</td>
-                <td>2</td>
+                <td>3</td>
                 <td>3 </td>
             </tr>
         </table>
@@ -231,7 +237,7 @@
                 <td class="yellow">Practice Jerseys</td>
                 <td class="red">Coach Gear</td>
             </tr>
-                <td>26<sup> *+1 jersey set*</sup></td>
+                <td>27<sup> *+1 jersey set*</sup></td>
                 <td>3</td>
                 <td>3<sup>*</sup></td>
             </tr>
