--- a/index.html
+++ b/index.html
@@ -66,11 +66,7 @@
                     <ul class="videos">
                         <h3>Videos to Watch</h3>
                         <section id="links">
-                            <a href="https://www.youtube.com/watch?v=mDaOAnLv538" target="_blank">4-2-3-1 Rafa Benitez</a>
-                            <a href="https://www.youtube.com/watch?v=mJ6joocBl9Q" target="_blank">4-2-3-1 Player Roles</a>
-                            <a href="https://www.youtube.com/watch?v=Y2LLoXZV7d0&t=26s" target="_blank">4-2-3-1 Player Roles II</a>
-                            <a href="https://www.youtube.com/watch?v=oGoYug8UPwg" target="_blank">4-2-3-1 Basics</a>
-                            <br><small>OBS: Just click on it. They are all links to YouTube Videos</small>
+                            <button><a href="https://www.youtube.com/channel/UC7-1hil_n8L2UIE90Irp-Ng" target="_blank">Coach's YouTube Channel</a></button>
                         </section>
                     </ul>
                 </ul>
@@ -89,62 +85,62 @@
 
                     <th colspan="3">Forwards</th>
                     <tr>
-                        <td><p>Agustin Torena <br><em><small></small></em></p></td>
-                        <td><p>Aziz Alarady <br><em><small>#96</small></em></p></td>
-                        <td><p>Belal Glab <br><em><small>#9</small></em></p></td>
+                        <td class="game"><p>Aziz Alarady <br><em><small>#96</small></em></p></td>
+                        <td class="game"><p>Belal Glab <br><em><small>#23</small></em></p></td>
+                        <td class="game"><p>Brandon Pearce <br><em><small>#28</small></em></p></td>
                     </tr>
                     <tr>
-                        <td><p>Brandon Pearce <br><em><small>#28</small></em></p></td>
-                        <td><p>Emmanuel Perez <br><em><small>#11</small></em></p></td>
-                        <td><p>Hunter Spencer <br><em><small></small></em></p></td>
+                        <td class="game"><p>Emmanuel Perez <br><em><small>#11</small></em></p></td>
+                        <td class="game"><p>Hunter Spencer <br><em><small>#7</small></em></p></td>
+                        <td class="game"><p>Jumaah Alfaihani <br><em><small>#94</small></em></p></td>
                     </tr>
                     <tr>
-                        <td><p>Jumaah Alfaihani <br><em><small>#94</small></em></p></td>
-                        <td><p>Luis Arce <br><em><small>#12</small></em></p></td>
-                        <td><p>Luis Jordan <br><em><small>#17</small></em></p></td>
+                        <td class="game"><p>Said Isa <br><em><small>#17</small></em></p></td>
+                        <td class="game"><p>Thaddeus Pappadakis <br><em><small>#18</small></em></p></td>
+                        <td class="practice"><p>Agustin Torena <br><em><small></small></em></p></td>
                     </tr>
                     <tr>
-                        <td><p>Said Isa <br><em><small></small></em></p></td>
-                        <td><p>Will Naughton <br><em><small>#45</small></em></p></td>
-                        <td><p><br><em><small></small></em></p></td>
+                        <td class="practice"><p>Luis Arce<br><em><small></small></em></p></td>
+                        <td class="practice"><p>Luis Jordan<br></p></td>
+                        <td class="practice"><p>Will Naughton <br><em><small></small></em></p></td>
                     </tr>
 
                     <th colspan="3">Midfielders</th>
                     <tr>
-                        <td><p>Asher Jensen <br><em><small>#7</small></em></p></td>
-                        <td><p>Charly Nuñez <br><em><small>#8</small></em></p></td>
-                        <td><p>Gabe Juarez <br><em><small>#18</small></em></p></td>
+                        <td class="game"><p>Asher Jensen <br><em><small>#71</small></em></p></td>
+                        <td class="game"><p>Charly Nuñez <br><em><small>#8</small></em></p></td>
+                        <td class="game"><p>Gabe Juarez <br><em><small>#21</small></em></p></td>
                     </tr>
                     <tr>
-                        <td><p>Jake Williams <br><em><small>#19</small></em></p></td>
-                        <td><p>Patrick <br><em><small></small></em></p></td>
-                        <td><p>Riley Wright <br><em><small>#10</small></em></p></td>
+                        <td class="game"><p>Jake Williams <br><em><small>#19</small></em></p></td>
+                        <td class="game"><p>Patrick Hollmen<br><em><small>#29</small></em></p></td>
+                        <td class="game"><p>Riley Wright <br><em><small>#10</small></em></p></td>
                     </tr>
                     <tr>
-                        <td><p>Sergio Payá <br><em><small></small></em></p></td>
-                        <td><p>Santiago Tano <br><em><small></small></em></p></td>
-                        <td><p>Teegan Smith <br><em><small></small></em></p></td>
+                        <td class="game"><p>Sergio Payá <br><em><small>#9</small></em></p></td>
+                        <td class="game"><p>Santiago Tano <br><em><small>#12</small></em></p></td>
+                        <td class="game"><p>Teegan Smith <br><em><small>#25</small></em></p></td>
                     </tr>
 
                     <th colspan="3">Defenders</th>
                     <tr>
-                        <td><p>Ethan Barnette <br><em><small>#3</small></em></p></td>
-                        <td><p>James Patten <br><em><small>#14</small></em></p></td>
-                        <td><p>Jorge Benitez <br><em><small>#26</small></em></p></td>
+                        <td class="game"><p>Ethan Barnette<br><em><small>#3</small></em></p></td>
+                        <td class="game"><p>James Patten<br><em><small>#14</small></em></p></td>
+                        <td class="game"><p>Jorge Benitez <br><em><small>#26</small></em></p></td>
                     </tr>
                     <tr>
-                        <td><p>Kaden Hecker <br><em><small>#22</small></em></p></td>
-                        <td><p>Kolton Kitchin <br><em><small>#24</small></em></p></td>
-                        <td><p>Kontey Simpore <br><em><small>#16</small></em></p></td>
+                        <td class="game"><p>Kaden Hecker <br><em><small>#2</small></em></p></td>
+                        <td class="game"><p>Kolton Kitchin <br><em><small>#24</small></em></p></td>
+                        <td class="game"><p>Kontey Simpore <br><em><small>#16</small></em></p></td>
                     </tr>
                     <tr>
-                        <td><p>Thaddeus Pappadakis <br><em><small></small></em></p></td>
-                        <td><p>Bernardo<br><em><small></small></em></p></td>
-                        <td><p>Mohammed<br><em><small></small></em></p></td>
+                        <td class="practice"><p>Cooper Sargent<br><em><small></small></em></p></td>
+                        <td class="practice"><p>Payton Sevy<br><em><small></small></em></p></td>
+                        <td><p><br></p></td>
                     </tr>
                     <th colspan="3">Goalkeeper</th>
                     <tr>
-                        <td colspan="3"><p>Tyler Bagley <br><em><small> #2</small></em></p></td>
+                        <td colspan="3" class="game"><p>Tyler Bagley <br><em><small> #1</small></em></p></td>
                     </tr>
 
                 </table>
