--- a/html/order.html
+++ b/html/order.html
@@ -31,7 +31,7 @@
             <tr class="game">
                 <td>Aziz</td>
                 <td>96</td>
-                <td>Medium</td>
+                <td>Small</td>
                 <td>Medium</td>
             </tr>
             <tr class="game">
@@ -178,12 +178,6 @@
                 <td>Medium</td>
                 <td>Small</td>
             </tr>
-            <tr class="special">
-                <td>Extra</td>
-                <td>N/A</td>
-                <td>Large</td>
-                <td>Large</td>
-            </tr>
             <tr class="practice">
                 <td>Luis C.</td>
                 <td>N/A</td>
@@ -192,12 +186,6 @@
             </tr>
             <tr class="practice">
                 <td>Cooper</td>
-                <td>N/A</td>
-                <td>Large</td>
-                <td>N/A</td>
-            </tr>
-            <tr class="practice"> 
-                <td>Payton</td>
                 <td>N/A</td>
                 <td>Large</td>
                 <td>N/A</td>
@@ -225,8 +213,8 @@
                 <td class="red">Practice Players</td>
             </tr>
                 <td>24</td>
-                <td>3</td>
-                <td>3 </td>
+                <td>2</td>
+                <td>2 </td>
             </tr>
         </table>
 
@@ -237,8 +225,8 @@
                 <td class="yellow">Practice Jerseys</td>
                 <td class="red">Coach Gear</td>
             </tr>
-                <td>27<sup> *+1 jersey set*</sup></td>
-                <td>3</td>
+                <td>26<sup> *+1 jersey set*</sup></td>
+                <td>2</td>
                 <td>3<sup>*</sup></td>
             </tr>
         </table>
