--- a/html/order.html
+++ b/html/order.html
@@ -166,6 +166,14 @@
                 <td>Large</td>
                 <td>Large</td>
             </tr>
+
+            <tr class="game">
+                <td>Cooper</td>
+                <td>6</td>
+                <td>Large</td>
+                <td>Medium</td>
+            </tr>
+
             <tr class="special">
                 <td>Will</td>
                 <td>45</td>
@@ -178,16 +186,25 @@
                 <td>Medium</td>
                 <td>Small</td>
             </tr>
+
+            <tr class="special">
+                <td>Extra</td>
+                <td>N/A</td>
+                <td>Small</td>
+                <td>Medium</td>
+            </tr>
+
+            <tr class="special">
+                <td>Extra</td>
+                <td>N/A</td>
+                <td>Medium</td>
+                <td>Medium</td>
+            </tr>
+
             <tr class="practice">
                 <td>Luis C.</td>
                 <td>N/A</td>
                 <td>Medium</td>
-                <td>N/A</td>
-            </tr>
-            <tr class="practice">
-                <td>Cooper</td>
-                <td>N/A</td>
-                <td>Large</td>
                 <td>N/A</td>
             </tr>
         </table>
@@ -212,9 +229,9 @@
                 <td class="yellow">Special Players</td>
                 <td class="red">Practice Players</td>
             </tr>
-                <td>24</td>
+                <td>25</td>
                 <td>2</td>
-                <td>2 </td>
+                <td>1 </td>
             </tr>
         </table>
 
@@ -225,11 +242,11 @@
                 <td class="yellow">Practice Jerseys</td>
                 <td class="red">Coach Gear</td>
             </tr>
-                <td>26<sup> *+1 jersey set*</sup></td>
-                <td>2</td>
+                <td>29<sup></sup></td>
+                <td>30</td>
                 <td>3<sup>*</sup></td>
             </tr>
         </table>
-        <p><small>*For coach Renan, instead of getting a beanie, please order an extra set of player's jersey - size small, no number</small></p>
+        <p><small>*For coach Renan and Mansour - no beanie</small></p>
     </body>
 </html>
