--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
                         <td class="game"><p>Kontey Simpore <br><em><small>#16</small></em></p></td>
                     </tr>
                     <tr>
-                        <td class="practice"><p>Cooper Sargent<br><em><small></small></em></p></td>
-                        <td class="practice"><p>Payton Sevy<br><em><small></small></em></p></td>
+                        <td class="practice"><p>Cooper Sargent<br><em><small>#6</small></em></p></td>
+                        <td><p><br></p></td>
                         <td><p><br></p></td>
                     </tr>
                     <th colspan="3">Goalkeeper</th>
