--- a/index.html
+++ b/index.html
@@ -95,48 +95,48 @@
                         <td class="game"><p>Jumaah Alfaihani <br><em><small>#94</small></em></p></td>
                     </tr>
                     <tr>
-                        <td class="game"><p>Said Isa <br><em><small>#17</small></em></p></td>
-                        <td class="game"><p>Thaddeus Pappadakis <br><em><small>#18</small></em></p></td>
                         <td class="practice"><p>Agustin Torena <br><em><small></small></em></p></td>
-                    </tr>
-                    <tr>
                         <td class="practice"><p>Luis Arce<br><em><small></small></em></p></td>
                         <td class="practice"><p>Luis Jordan<br></p></td>
+                    </tr>
+                    <tr>
                         <td class="practice"><p>Will Naughton <br><em><small></small></em></p></td>
+                        <td><p><br></p></td>
+                        <td><p><br></p></td>
                     </tr>
 
                     <th colspan="3">Midfielders</th>
                     <tr>
                         <td class="game"><p>Asher Jensen <br><em><small>#71</small></em></p></td>
-                        <td class="game"><p>Charly Nuñez <br><em><small>#8</small></em></p></td>
                         <td class="game"><p>Gabe Juarez <br><em><small>#21</small></em></p></td>
+                        <td class="game"><p>Jake Williams <br><em><small>#19</small></em></p></td>
                     </tr>
                     <tr>
-                        <td class="game"><p>Jake Williams <br><em><small>#19</small></em></p></td>
                         <td class="game"><p>Patrick Hollmen<br><em><small>#29</small></em></p></td>
                         <td class="game"><p>Riley Wright <br><em><small>#10</small></em></p></td>
+                        <td class="game"><p>Sergio Payá <br><em><small>#9</small></em></p></td>
                     </tr>
                     <tr>
-                        <td class="game"><p>Sergio Payá <br><em><small>#9</small></em></p></td>
-                        <td class="game"><p>Santiago Tano <br><em><small>#12</small></em></p></td>
                         <td class="game"><p>Teegan Smith <br><em><small>#25</small></em></p></td>
+                        <td><p><br></p></td>
+                        <td><p><br></p></td>
                     </tr>
 
                     <th colspan="3">Defenders</th>
                     <tr>
+                        <td class="game"><p>Charly Nuñez <br><em><small>#4</small></em></p></td>
+                        <td class="game"><p>Cooper Sargent<br><em><small>#6</small></em></p></td>
                         <td class="game"><p>Ethan Barnette<br><em><small>#3</small></em></p></td>
+                    </tr>
+                    <tr>
                         <td class="game"><p>James Patten<br><em><small>#14</small></em></p></td>
                         <td class="game"><p>Jorge Benitez <br><em><small>#26</small></em></p></td>
+                        <td class="game"><p>Kaden Hecker <br><em><small>#2</small></em></p></td>
                     </tr>
                     <tr>
-                        <td class="game"><p>Kaden Hecker <br><em><small>#2</small></em></p></td>
                         <td class="game"><p>Kolton Kitchin <br><em><small>#24</small></em></p></td>
                         <td class="game"><p>Kontey Simpore <br><em><small>#16</small></em></p></td>
-                    </tr>
-                    <tr>
-                        <td class="practice"><p>Cooper Sargent<br><em><small>#6</small></em></p></td>
-                        <td><p><br></p></td>
-                        <td><p><br></p></td>
+                        <td class="game"><p>Thaddeus Pappadakis <br><em><small>#18</small></em></p></td>
                     </tr>
                     <th colspan="3">Goalkeeper</th>
                     <tr>
@@ -154,6 +154,25 @@
                     <a href="./img/lineup.jpeg" target="_blank"><img src="./img/lineup.jpeg"></a>
                     <figcaption>Formation: 4-2-3-1</figcaption>
                 </figure>
+                <table>
+                    <tr>
+                        <td class="label">Captains:</td>
+                        <td class="player">Kolton Kitchin</td>
+                        <td class="player">Tyler Bagley</td>
+                    </tr>
+                    <tr>
+                        <td class="label">Free-Kick:</td>
+                        <td class="player" colspan="2">Aziz</td>
+                    </tr>
+                    <tr>
+                        <td class="label">Penalty-Kick:</td>
+                        <td class="player" colspan="2">Ethan Barnette</td>
+                    </tr>
+                    <tr>
+                        <td class="label">Corners:</td>
+                        <td class="player" colspan="2">Jake Williams</td>
+                    </tr>
+                </table>
             </section>
 
             <section id="Contact">
