--- a/html/order.html
+++ b/html/order.html
@@ -15,12 +15,14 @@
 
     <body>
         <table class="t1" border="1">
-            <th class="one" scope="row" colspan="4">Kits Ordering</th>
+            <th class="one" scope="row" colspan="6">Kits Ordering</th>
             <tr>
                 <td>Name</td>
                 <td>Jersey Number</td>
                 <td>Jersey Size</td>
                 <td>Shorts Size</td>
+                <td>Paid Gear</td>
+                <td>Paid Vegas</td>
             </tr>
             <tr class="game">
                 <td>Jorge</td>
@@ -33,12 +35,14 @@
                 <td>96</td>
                 <td>Small</td>
                 <td>Medium</td>
+                <td>Yes</td>
             </tr>
             <tr class="game">
                 <td>Brandon</td>
                 <td>28</td>
                 <td>Large</td>
                 <td>Large</td>
+                <td>Yes</td>
             </tr>
             <tr class="game">
                 <td>Charly</td>
@@ -51,27 +55,32 @@
                 <td>11</td>
                 <td>Medium</td>
                 <td>Large</td>
+                <td>Yes</td>
+                <td>Yes</td>
             </tr>
             <tr class="game">
                 <td>Ethan</td>
                 <td>3</td>
                 <td>Medium</td>
                 <td>Medium</td>
+                <td>Yes</td>
             </tr>
             <tr class="game">
-                <td>Hunter</td>
+                <td>Alex Gil</td>
                 <td>7</td>
                 <td>Medium</td>
                 <td>Medium</td>
             </tr>
             <tr class="game">
-                <td>Jake</td>
+                <td>Jake W.</td>
                 <td>19</td>
                 <td>Medium</td>
                 <td>Medium</td>
+                <td>Yes</td>
+                <td>Yes</td>
             </tr>
             <tr class="game">
-                <td>James</td>
+                <td>Jesus</td>
                 <td>14</td>
                 <td>Large</td>
                 <td>Large</td>
@@ -81,24 +90,24 @@
                 <td>94</td>
                 <td>Medium</td>
                 <td>Medium</td>
+                <td>Yes</td>
+                <td>Yes</td>
             </tr>
             <tr class="game">
                 <td>Kolton</td>
                 <td>24</td>
                 <td>Large</td>
                 <td>Large</td>
+                <td>Yes</td>
             </tr>
-            <tr class="game">
-                <td>Santiago</td>
-                <td>12</td>
-                <td>Medium</td>
-                <td>Medium</td>
-            </tr>
+            
             <tr class="game">
                 <td>Sérgio</td>
                 <td>9</td>
                 <td>Small</td>
                 <td>Small</td>
+                <td>Yes</td>
+                <td>Yes</td>
             </tr>
             <tr class="game">
                 <td>Thaddeus</td>
@@ -111,6 +120,8 @@
                 <td>1</td>
                 <td>Large</td>
                 <td>Medium</td>
+                <td>Yes</td>
+                <td>Yes</td>
             </tr>
             <tr class="game">
                 <td>Riley </td>
@@ -129,42 +140,47 @@
                 <td>23</td>
                 <td>Medium</td>
                 <td>Medium</td>
+                <td>Yes</td>
+                <td>Yes</td>
             </tr>
             <tr class="game">
                 <td>Gabe</td>
                 <td>21</td>
                 <td>Large</td>
                 <td>Medium</td>
+                <td>Yes</td>
             </tr>
             <tr class="game">
                 <td>Kaden</td>
                 <td>2</td>
                 <td>Medium</td>
                 <td>Medium</td>
+                <td>Yes</td>
             </tr>
             <tr class="game">
                 <td>Kontey</td>
                 <td>16</td>
                 <td>Large</td>
                 <td>Large</td>
+                <td>Yes</td>
+                <td>Yes</td>
             </tr>
             <tr class="game">
-                <td>Said</td>
+                <td>Jake A.</td>
                 <td>17</td>
                 <td>Small</td>
                 <td>Small</td>
+                <td>Yes</td>
+                <td>Yes</td>
             </tr>
-            <tr class="game">
-                <td>Teegan</td>
-                <td>25</td>
-                <td>Medium</td>
-                <td>Medium</td>
-            </tr>
+
             <tr class="game">
                 <td>Patrick</td>
                 <td>29</td>
                 <td>Large</td>
                 <td>Large</td>
+                <td>Yes</td>
+                <td>Yes</td>
             </tr>
 
             <tr class="game">
@@ -172,6 +188,7 @@
                 <td>6</td>
                 <td>Large</td>
                 <td>Medium</td>
+                <td>Yes</td>
             </tr>
 
             <tr class="special">
@@ -185,6 +202,20 @@
                 <td>30</td>
                 <td>Medium</td>
                 <td>Small</td>
+            </tr>
+
+            <tr class="special">
+                <td>Player Quit</td>
+                <td>12</td>
+                <td>Medium</td>
+                <td>Medium</td>
+            </tr>
+
+            <tr class="special">
+                <td>Player Quit</td>
+                <td>25</td>
+                <td>Medium</td>
+                <td>Medium</td>
             </tr>
 
             <tr class="special">
