--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 <a id="Line-up" title="Click here for the JavaScript Database of the players" onclick="print_roster()"><h1>Line-up for the next game</h1></a>
                 <figure>
                     <a href="./img/lineup.jpeg" target="_blank"><img src="./img/lineup.jpeg"></a>
-                    <figcaption>Formation: 4-2-3-1</figcaption>
+                    <figcaption>Formation: 5-3-2</figcaption>
                 </figure>
                 <table>
                     <tr>
