--- a/html/order.html
+++ b/html/order.html
@@ -29,6 +29,8 @@
                 <td>26</td>
                 <td>Large</td>
                 <td>Large</td>
+                <td style="color: blue;">Not Yet</td>
+                <td style="color: blue;">Not Yet</td>
             </tr>
             <tr class="game">
                 <td>Aziz</td>
@@ -36,6 +38,7 @@
                 <td>Small</td>
                 <td>Medium</td>
                 <td>Yes</td>
+                <td style="color: blue;">Not Yet</td>
             </tr>
             <tr class="game">
                 <td>Brandon</td>
@@ -43,12 +46,15 @@
                 <td>Large</td>
                 <td>Large</td>
                 <td>Yes</td>
+                <td style="color: goldenrod;">Yes (pending)</td>
             </tr>
             <tr class="game">
                 <td>Charly</td>
                 <td>4</td>
                 <td>Large</td>
                 <td>Large</td>
+                <td style="color: blue;">Not Yet</td>
+                <td style="color: red;">Won't need</td>
             </tr>
             <tr class="game">
                 <td>Emmanuel</td>
@@ -64,12 +70,15 @@
                 <td>Medium</td>
                 <td>Medium</td>
                 <td>Yes</td>
+                <td style="color: goldenrod;">Yes (pending)</td>
             </tr>
             <tr class="game">
                 <td>Alex Gil</td>
                 <td>7</td>
                 <td>Medium</td>
                 <td>Medium</td>
+                <td style="color: blue;">Not Yet</td>
+                <td style="color: red;">Won't need</td>
             </tr>
             <tr class="game">
                 <td>Jake W.</td>
@@ -84,6 +93,8 @@
                 <td>14</td>
                 <td>Large</td>
                 <td>Large</td>
+                <td style="color: goldenrod;">Yes (pending)</td>
+                <td style="color: goldenrod;">Yes (pending)</td>
             </tr>
             <tr class="game">
                 <td>Jumaah</td>
@@ -99,6 +110,7 @@
                 <td>Large</td>
                 <td>Large</td>
                 <td>Yes</td>
+                <td style="color: goldenrod;">Yes (pending)</td>
             </tr>
             
             <tr class="game">
@@ -114,6 +126,8 @@
                 <td>18</td>
                 <td>Large</td>
                 <td>Large</td>
+                <td style="color: red;">Won't need</td>
+                <td style="color: red;">Won't need</td>
             </tr>
             <tr class="game">
                 <td>Bagley</td>
@@ -128,12 +142,16 @@
                 <td>10</td>
                 <td>Large</td>
                 <td>Large</td>
+                <td style="color: goldenrod;">Yes (pending)</td>
+                <td style="color: goldenrod;">Yes (pending)</td>
             </tr>
             <tr class="game">
                 <td>Asher</td>
                 <td>71</td>
                 <td>Large</td>
                 <td>Medium</td>
+                <td style="color: goldenrod;">Yes (pending)</td>
+                <td style="color: goldenrod;">Yes (pending)</td>
             </tr>
             <tr class="game">
                 <td>Belal</td>
@@ -149,6 +167,7 @@
                 <td>Large</td>
                 <td>Medium</td>
                 <td>Yes</td>
+                <td style="color: blue;">Not Yet</td>
             </tr>
             <tr class="game">
                 <td>Kaden</td>
@@ -156,6 +175,7 @@
                 <td>Medium</td>
                 <td>Medium</td>
                 <td>Yes</td>
+                <td style="color: blue;">Not Yet</td>
             </tr>
             <tr class="game">
                 <td>Kontey</td>
@@ -189,6 +209,7 @@
                 <td>Large</td>
                 <td>Medium</td>
                 <td>Yes</td>
+                <td style="color: goldenrod;">Yes (pending)</td>
             </tr>
 
             <tr class="special">
